Add buttons section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="calculator-body">
         <div class="screen-section"></div>
+        <div class="buttons-section"></div>
     </div>
 </body>
 </html>
