--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="calculator-body">
-        <div class="screen-section"></div>
+        <div class="screen-section">
+            <div class="screen"></div>
+        </div>
         <div class="buttons-section"></div>
     </div>
 </body>
