--- a/index.html
+++ b/index.html
@@ -12,7 +12,23 @@
         <div class="screen-section">
             <div class="screen"></div>
         </div>
-        <div class="buttons-section"></div>
+        <div class="buttons-section">
+            <button class="number-seven-button">7</button>
+            <button class="number-eight-button">8</button>
+            <button class="number-nine-button">9</button>
+            <button class="divide-button">/</button>
+            <button class="four-button">4</button>
+            <button class="five-button">5</button>
+            <button class="six-button">6</button>
+            <button class="multiply-button">*</button>
+            <button class="one-button">1</button>
+            <button class="two-button">2</button>
+            <button class="three-button">3</button>
+            <button class="substract-button">-</button>
+            <button class="zero-button">0</button>
+            <button class="clear-button">Clear</button>
+            <button class="equals-button">=</button>
+        </div>
     </div>
 </body>
 </html>
