Replace unique classes for each operator
Replace each different class that every operator has with a general
class for every operator.

Different classes for every operator is redundant since they are going
to be used as a nodelist

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
             <button class="number-button">7</button>
             <button class="number-button">8</button>
             <button class="number-button">9</button>
-            <button class="divide-button">/</button>
+            <button class="operator-button">/</button>
             <button class="number-button">4</button>
             <button class="number-button">5</button>
             <button class="number-button">6</button>
-            <button class="multiply-button">*</button>
+            <button class="operator-button">*</button>
             <button class="number-button">1</button>
             <button class="number-button">2</button>
             <button class="number-button">3</button>
-            <button class="substract-button">-</button>
+            <button class="operator-button">-</button>
             <button class="number-button">0</button>
             <button class="clear-button">Clear</button>
             <button class="equals-button">=</button>
