Add plus sign button

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <button class="number-button">0</button>
             <button class="clear-button">Clear</button>
             <button class="equals-button">=</button>
+            <button class="operator-button">+</button>
         </div>
     </div>
 </body>
