Add period button

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <button class="clear-button">Clear</button>
             <button class="equals-button">=</button>
             <button class="operator-button">+</button>
+            <button class="period-button">.</button>
         </div>
     </div>
 </body>
